k8s/zent/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zent
  labels:
    app.kubernetes.io/part-of: zent
    pod-security.kubernetes.io/enforce: privileged
